[package]
name = "unichain-verification"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.3", features = ["providers"] }
op-alloy-network = "0.16.0"
clap = { version = "4.5.37", features = ["derive"] }
dotenv = "0.15.0"
hex = "0.4.3"
reqwest = "0.12.15"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
